data/derived/comb/progs/unify/prog7420.ml.out
Characters 133-137:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type int * int list
       but an expression was expected of type int list
